--- a/contrib/integrations/hello/hello-deployment-plugin/Makefile
+++ b/contrib/integrations/hello/hello-deployment-plugin/Makefile
@@ -19,7 +19,7 @@ export PLUGIN_MANIFEST_BINARY
 
 TARGET_LDFLAGS = -ldflags "-X github.com/ovh/cds/sdk.VERSION=$(VERSION) -X github.com/ovh/cds/sdk.GOOS=$$GOOS -X github.com/ovh/cds/sdk.GOARCH=$$GOARCH -X github.com/ovh/cds/sdk.GITHASH=$(GITHASH) -X github.com/ovh/cds/sdk.BUILDTIME=$(BUILDTIME) -X github.com/ovh/cds/sdk.BINARY=$(TARGET_NAME)"
 TARGET_OS = $(if ${OS},${OS},windows darwin linux freebsd openbsd)
-TARGET_ARCH = $(if ${ARCH},${ARCH},amd64 arm 386 arm64)
+TARGET_ARCH = $(if ${ARCH},${ARCH},amd64 arm64)
 
 GO_BUILD = go build
 
