--- a/contrib/integrations/arsenal/arsenal-deployment-plugin/Makefile
+++ b/contrib/integrations/arsenal/arsenal-deployment-plugin/Makefile
@@ -3,27 +3,21 @@
 VERSION := $(if ${CDS_VERSION},${CDS_VERSION},snapshot)
 GITHASH := $(if ${GIT_HASH},${GIT_HASH},`git log -1 --format="%H"`)
 BUILDTIME := `date "+%m/%d/%y-%H:%M:%S"`
+CDSCTL := $(if ${CDSCTL},${CDSCTL},cdsctl)
 
 TARGET_DIR = ./dist
-TARGET_NAME = plugin-kubernetes-deployment
-
-PLUGIN_MANIFEST=`echo $(TARGET_NAME).yml`
-export PLUGIN_MANIFEST
+TARGET_NAME = $(shell cat *.yml | yq .name)
 
 define PLUGIN_MANIFEST_BINARY
 os: %os%
 arch: %arch%
 cmd: ./%filename%
-requirements:
-- name: git
-  type: binary
-  value: git
 endef
 export PLUGIN_MANIFEST_BINARY
 
 TARGET_LDFLAGS = -ldflags "-X github.com/ovh/cds/sdk.VERSION=$(VERSION) -X github.com/ovh/cds/sdk.GOOS=$$GOOS -X github.com/ovh/cds/sdk.GOARCH=$$GOARCH -X github.com/ovh/cds/sdk.GITHASH=$(GITHASH) -X github.com/ovh/cds/sdk.BUILDTIME=$(BUILDTIME) -X github.com/ovh/cds/sdk.BINARY=$(TARGET_NAME)"
 TARGET_OS = $(if ${OS},${OS},windows darwin linux freebsd)
-TARGET_ARCH = $(if ${ARCH},${ARCH},amd64 arm 386 arm64)
+TARGET_ARCH = $(if ${ARCH},${ARCH},amd64 arm64)
 
 GO_BUILD = go build
 
@@ -54,12 +48,12 @@ build: $(TARGET_DIR)
 
 publish:
 	@echo "Updating plugin..."
-	cdsctl admin plugins import $(TARGET_DIR)/$(TARGET_NAME).yml
+	$(CDSCTL) admin plugins import $(TARGET_DIR)/$(TARGET_NAME).yml
 	@for GOOS in $(TARGET_OS); do \
 		for GOARCH in $(TARGET_ARCH); do \
 			EXTENSION=""; \
 			if test "$$GOOS" = "windows" ; then EXTENSION=".exe"; fi; \
 			echo "Updating plugin binary $(TARGET_NAME)-$$GOOS-$$GOARCH$$EXTENSION"; \
-			cdsctl admin plugins binary-add $(TARGET_NAME) $(TARGET_DIR)/$(TARGET_NAME)-$$GOOS-$$GOARCH.yml $(TARGET_DIR)/$(TARGET_NAME)-$$GOOS-$$GOARCH$$EXTENSION; \
+			$(CDSCTL) admin plugins binary-add $(TARGET_NAME) $(TARGET_DIR)/$(TARGET_NAME)-$$GOOS-$$GOARCH.yml $(TARGET_DIR)/$(TARGET_NAME)-$$GOOS-$$GOARCH$$EXTENSION; \
 		done; \
 	done
