test: init_plugins integration test
Signed-off-by: François Samin <francois.samin@ovhcloud.com>

--- a/tests/01_init_plugins.yml
+++ b/tests/01_init_plugins.yml
@@ -9,7 +9,8 @@ vars:
 
 testcases:
   - name: install plugins
-    range: '{{.plugins}}'
     steps:
-      - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental plugin import {{.dist}}/{{.value}}.yml
-      - script: {{.cdsctl}} -f {{.cdsctl.config}} admin plugin binary-add script {{.dist}}/{{.value}}-linux-amd64.yml {{.dist}}/{{.value}}-linux-amd64
+    - range: '{{.plugins}}'
+      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental plugin import {{.dist}}/{{.value}}.yml
+    - range: '{{.plugins}}'
+      script: {{.cdsctl}} -f {{.cdsctl.config}} admin plugin binary-add script {{.dist}}/{{.value}}-linux-amd64.yml {{.dist}}/{{.value}}-linux-amd64
