test: init_plugins integration test
Signed-off-by: François Samin <francois.samin@ovhcloud.com>

--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -48,7 +48,7 @@ testcases:
     git_repo: "{{.git_repo}}"
     git_host: "{{.git.host}}"
     git_user: "{{.git.user}}"
-    git_email: "{{.emailaddress}}"
+    git_email: "{{.Prepare-test.emailaddress}}"
     git_password: "{{.git.password}}"
     gpg_key_id: "{{.gpg.key_id}}"
     files:
