--- a/tests/lib/v2_push_files_on_repo.yml
+++ b/tests/lib/v2_push_files_on_repo.yml
@@ -21,7 +21,7 @@ steps:
       /bin/bash -c cat | yq -P <<- EOF > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
       {{.value}}
       EOF
-  - script: cd /tmp/repos/{{.input.git_repo}} && git config --local user.name {{.input.git_user}} && git config --local user.email {{.input.git_email}}
+  - script: cd /tmp/repos/{{.input.git_repo}} && git config user.name {{.input.git_user}} && git config user.email {{.input.git_email}}
   - script: cd /tmp/repos/{{.input.git_repo}} && git add --all
   - script: cd /tmp/repos/{{.input.git_repo}} && git commit --gpg-sign={{.input.gpg_key_id}} -m "add file and sign"
   - script: cd /tmp/repos/{{.input.git_repo}} && git push
