fix(test): remove json format

--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -88,7 +88,7 @@ testcases:
           result.systemoutjson.systemoutjson1.id
 
   - name: Get CDS project analysis
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis show {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.analysisID}} --format json"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis show {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.analysisID}}"
     assertions:
     - result.systemoutjson.status ShouldEqual "Success"
 
