--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -33,6 +33,7 @@ testcases:
     git_repo: "{{.git_repo}}"
 
   - type: v2_install_gpg_key
+    cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
     gpg_key_id: "{{.gpg.key_id}}"
     git_host: "{{.git.host}}"
     git_user: "{{.git.user}}"
