--- a/tests/lib/v2_install_gpg_key.yml
+++ b/tests/lib/v2_install_gpg_key.yml
@@ -1,5 +1,6 @@
 executor: v2_install_gpg_key
 input:
+  cdsctl_command: ""
   gpg_key_id: ""
   git_host: ""
   git_user: ""
@@ -100,6 +101,9 @@ steps:
   #    - result.bodyjson.message ShouldContainSubstring "A key with the same id already exists"
 
   - script: 'curl --silent --fail -X POST {{.input.git_host}}/api/v1/user/gpg_keys -u "{{.input.git_user}}:{{.input.git_password}}" -H "Content-type: application/json" -d @/tmp/{{.input.gpg_key_id}}.gpg.pub.json'
+
+  # Add the GPG key on cd CDS user
+  - script: "{{.input.cdsctl_command}} user gpg import --pub-key-file /tmp/{{.input.gpg_key_id}}.gpg.pub"
 
 output:
   emailaddress: "{{.emailaddress}}"
