--- a/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
+++ b/tests/fixtures/ITCLIPRJVCS/my-workflow.yml
@@ -14,7 +14,7 @@ jobs:
     name: This is my first job
     if: always()
     region: default
-    runs-on: ITCLIPRJVCS/my_vcs_server/gituser/myrepo/docker-debian@master
+    runs-on: .cds/worker-models/docker-debian9.yml
     steps:
       - run: echo "I am ${CDS_JOB}"
         id: mystep
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout
         id: checkout
-      - uses: actions/ITCLIPRJVCS/my_vcs_server/gituser/myrepo/test-parent-action@master
+      - uses: .cds/actions/my-parent-action.yml
         id: customaction
       - run: echo ${{ env.myvar }}
         id: workflowEnv
