--- a/tests/08_v2_workflow_service.yml
+++ b/tests/08_v2_workflow_service.yml
@@ -63,7 +63,7 @@ testcases:
             foo: barWorkflow
           jobs:
             myjob:
-              runs-on: ASCOD/stash-build/yes/ascode/golang@master
+              runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
               services:
                 foofoo:
                   image: postgres
