--- a/tests/08_v2_workflow_integration.yml
+++ b/tests/08_v2_workflow_integration.yml
@@ -1,7 +1,7 @@
 name: Upload and Download generic artifacts from Workflow as code v2
 vars:
-  cds_project: "ITV2ARTIFACTSGENERIC"
-  git_repo: "it_v2_artifacts_generic"
+  cds_project: "ITV2INTEGRATION"
+  git_repo: "it_v2_integration"
   worker_model: "{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian"
 
 testcases:
@@ -43,6 +43,55 @@ testcases:
       emailaddress:
         from: result.emailaddress
 
+- name: Setup artifactory integration on project
+  steps:
+  - name: Prepare artifactory integration yaml file
+    script: |-
+      /bin/bash -c cat <<- EOF > /tmp/project_integration_artifactory.yml
+      name: artifactory
+      model:
+        name: Artifactory
+      config:
+        build.info.prefix:
+          value: rt
+          type: string
+        cds.repository:
+          value: rt
+          type: string
+        distribution.url:
+          value: rt
+          type: string
+        platform:
+          value: rt
+          type: string
+        project.key:
+          value: rt
+          type: string
+        promotion.maturity.high:
+          value: rt
+          type: string
+        promotion.maturity.low:
+          value: rt
+          type: string
+        release.token:
+          value: '**********'
+          type: password
+        repo.prefix:
+          value: rt
+          type: string
+        token:
+          value: '**********'
+          type: password
+        token.name:
+          value: rt
+          type: string
+        url:
+          value: rt
+          type: string
+      EOF
+
+  - name: Import artifactory integration yaml file
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} project integration import {{.cds_project}} /tmp/project_integration_artifactory.yml"
 
 - name: Push workflow file
   steps:
@@ -63,7 +112,10 @@ testcases:
           image: buildpack-deps:buster
       workflows/workflowA.yaml:
         name: WorkflowA
+
         on: [push]
+        integrations: [artifactory]
+
         jobs:
           First-Job:
             runs-on: "{{.worker_model}}"
@@ -72,20 +124,20 @@ testcases:
                   #!/bin/bash -x
                   env > env.txt
                   echo "foobar" > foo.txt
-              - uses: actions/uploadArtifact
-                with:
-                  path: "*.txt"
+              #- uses: actions/uploadArtifact
+              #  with:
+              #    path: "*.txt"
           Second-Job:
             runs-on: "{{.worker_model}}"
             needs: [First-Job]
             steps:
-              - uses: actions/downloadArtifact
+              #- uses: actions/downloadArtifact
               - run: |-
                   #!/bin/bash
                   ls -l
-                  cat env.txt
-                  cat foo.txt
-                  grep foobar foo.txt
+              #    cat env.txt
+              #    cat foo.txt
+              #    grep foobar foo.txt
 
   - name: Check CDS project analyses
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -111,3 +163,17 @@ testcases:
     - result.systemoutjson.status ShouldEqual "Success"
     retry: 100
     delay: 10
+
+  - name: Check the workflow run job info mentions the artifactory integration on the first job
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs info {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA 1 First-Job"
+    assertions:
+    - result.systemout ShouldContainSubstring Integration
+    - result.systemout ShouldContainSubstring artifactory
+    - result.systemout ShouldContainSubstring First-Job
+
+  - name: Check the workflow run job info mentions the artifactory integration on the second job
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs info {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA 1 Second-Job"
+    assertions:
+    - result.systemout ShouldContainSubstring Integration
+    - result.systemout ShouldContainSubstring artifactory
+    - result.systemout ShouldContainSubstring Second-Job
