--- a/tests/08_v2_manualjob.yml
+++ b/tests/08_v2_manualjob.yml
@@ -78,7 +78,7 @@ testcases:
                 - run: echo 'World'
                   id: step2
 
-    - name: Check CDS project analyses status
+    - name: Check analyses
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 2
@@ -86,6 +86,12 @@ testcases:
         - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
       retry: 10
       delay: 12
+      vars:
+        analysisID:
+          from: result.systemoutjson.systemoutjson1.id
+
+    - name: Display analysis result
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis show {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.Check-analyses.analysisID}}"
 
     - name: Check that the CDS workflow has at least one execution
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
